<?xml version="1.0"?>
<package>
  <name>lab5</name>
  <version>0.0.0</version>
  <description>The lab5 package</description>

  <maintainer email="pwilczyn@todo.todo">pwilczyn</maintainer>

  <license>TODO</license>

 	<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

</package>
